--- a/src/index.css
+++ b/src/index.css
@@ -28,33 +28,15 @@
 }
 
 
-/* .banner-container {
-    position: relative;
-    width: 200px; 
-    height: 200px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-} */
-
-/*.rotating-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 150%;
-    height: 150%;
-    background-color: red;
-    animation: rotateBackground 10s linear infinite;
-    z-index: -1;
-    border-radius: 20px;
+@keyframes borderColor {
+  0% { border-color: red; }
+  25% { border-color: blue; }
+  50% { border-color: green; }
+  75% { border-color: yellow; }
+  100% { border-color: red; }
 }
 
-.banner-image {
-    position: relative;
-    z-index: 1;
-    width: 100%; 
-    height: auto;
-    border-radius: 20px;
-} */
+.animate-border {
+  animation: borderColor 4s infinite;
+}
 
